--- a/tasks/templates/tasks/task_list.html
+++ b/tasks/templates/tasks/task_list.html
@@ -13,8 +13,9 @@
 
         {% if user.is_authenticated %}
             <p>Hello, {{user.username }} | <a href = "{% url 'logout' %}">Logout</a></p>
+            <a href = "{%url 'task-create' %}"> Add Task </a>
         {% else %}
-            <p><a href = "{% url 'login' %}"> Login </a></p>
+            <p>Please <a href = "{% url 'login' %}"> Login </a>oto see your taskzz </p>
         {% endif %}
     <h1> My Tasks</h1>
     <ul>
